--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta
       name="description"
-      content="BookBuzz your best source to buy cheap book online, make online book purchase, making us the best book website in India to read book online"
+      content="BookBuzz your best source to buy cheap book online, make online book purchase, making us the best book website in the World to read book online"
     />
     <meta name="keywords" content="online bookstore, buy books online, read books online, books with free shipping online, best book websites, online book purchase">
     <link rel="preconnect" href="https://fonts.googleapis.com">
